fix browser clipping of youtube by assigning a `vh` to the iphone div

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -144,6 +144,9 @@ html, body {
   /*float: left;*/
   width: 50%;
   position: relative;
+  /* Note: the below CSS property fixes the clipping issue,
+     see: http://stackoverflow.com/questions/43213062/ */
+  height: 100vh;
   /*background-image: url("../images/iphone-template.jpg");*/
 }
 
